# lgk-zmk

./: .gitignore  build.yaml  keybinds.txt
.github/workflows/: build.yml
boards/shields/custom_keyboard/: custom_keyboard.conf
boards/shields/lgk/: Kconfig.defconfig  Kconfig.shield  lgk.conf  lgk.keymap  lgk.overlay  lgk.zmk.yml
config/: nice_nano.conf  nice_nano_v2.conf  west.yml
config/boards/shields/custom_keyboard/: Kconfig.defconfig  Kconfig.shield  custom_keyboard.conf  custom_keyboard.zmk.yml  custom_keyboard_test.keymap
zephyr/: module.yml
zmk-nice-nano-v2/: .gitignore  CMakeLists.txt  README.md  build.yaml  keybinds.txt  west.yml
zmk-nice-nano-v2/.github/workflows/: build.yml
zmk-nice-nano-v2/app/: prj.conf
zmk-nice-nano-v2/app/boards/arm/nice_nano_v2/: Kconfig.board  Kconfig.defconfig  board.c  board.cmake  board.dts  nice_nano_v2-pinctrl.dtsi  nice_nano_v2_defconfig
zmk-nice-nano-v2/app/src/: layout.c
zmk-nice-nano-v2/config/: overlay.conf
zmk-nice-nano-v2/config/boards/shields/custom_keyboard/: custom_keyboard.conf  custom_keyboard.keymap  custom_keyboard.overlay  custom_keyboard_minimal.keymap  custom_keyboard_minimal.overlay
zmk-nice-nano-v2/zephyr/: module.yml
